Support register extension using hypha

--- a/docs/bioimage-chatbot-extension-tutorial.ipynb
+++ b/docs/bioimage-chatbot-extension-tutorial.ipynb
@@ -15,6 +15,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Using the chatbot in an ImJoy plugin\n",
+        "\n",
+        "Below you will find an example of how to use the chatbot in an ImJoy plugin. Using `api.createWindow`, we can display the chatbot inline as an imjoy plugin and interact with its api."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 25,
       "metadata": {
@@ -69,49 +78,152 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Create a chatbot extension\n",
+        "\n",
+        "A chatbot extension object is a dictionary with the following keys:\n",
+        " - `id`: a unique identifier for the extension\n",
+        " - `name`: the name of the extension\n",
+        " - `description`: a short description of the extension\n",
+        " - `type`: it must be `bioimageio-chatbot-extension`\n",
+        " - `tools`: a dictionary with functions of tools, it represents the set of functions your extension offers, each accepting configuration parameters as input. These functions should carry out specific tasks and return their results in a dictionary.\n",
+        " - `get_schema`: a function returns the schema for the tools, it returns a JSON schema for each tool function, specifying the structure and types of the expected parameters. This schema is crucial for instructing the chatbot to generate the correct input paramters and validate the inputs and ensuring they adhere to the expected format. Importantly, the chatbot uses the title and description for each field to understand what expected for the tool will generating a function call to run the tool (also see the detailed instructions below).\n",
+        "\n",
+        "\n",
+        " The following is an example of creating a chatbot extension:"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 22,
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [
-        {
-          "data": {
-            "application/javascript": "window.connectPlugin && window.connectPlugin(\"b78046eb-f9bd-432c-a1ea-5776c21ba3be\")",
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/html": [
-              "<div id=\"ebba4da2-6847-4294-8aab-89b79f6ef134\"></div>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/plain": [
-              "<_GatheringFuture pending>"
-            ]
-          },
-          "execution_count": 22,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pydantic import BaseModel, Field\n",
+        "from skimage import io, filters, data\n",
+        "\n",
+        "\n",
+        "class ApplyFilterInput(BaseModel):\n",
+        "    \"\"\"Apply a gaussian filter to an example image\"\"\"\n",
+        "    sigma: float = Field(..., description=\"Standard deviation for Gaussian kernel\")\n",
+        "\n",
+        "async def apply_filter(kwargs):\n",
+        "    config = ApplyFilterInput(**kwargs)\n",
+        "\n",
+        "    # Load the image\n",
+        "    image = data.cell()\n",
+        "\n",
+        "    # Apply the filter\n",
+        "    filtered_image = filters.gaussian(image, sigma=config.sigma)\n",
+        "\n",
+        "    # Display the image\n",
+        "    viewer = await api.showDialog(src=\"https://kitware.github.io/itk-vtk-viewer/app/\")\n",
+        "    await viewer.setImage(filtered_image)\n",
+        "    \n",
+        "    return \"Filter applied successfully\"\n",
+        "\n",
+        "def get_schema():\n",
+        "    return {\n",
+        "        \"apply_filter\": ApplyFilterInput.schema(),\n",
+        "    }\n",
+        "\n",
+        "# Define a chatbot extension\n",
+        "image_processing_extension = {\n",
+        "    \"_rintf\": True,\n",
+        "    \"id\": \"image-processing\",\n",
+        "    \"type\": \"bioimageio-chatbot-extension\",\n",
+        "    \"name\": \"Image Processing\",\n",
+        "    \"description\": \"Apply gaussian filter to an example image\",\n",
+        "    \"get_schema\": get_schema,\n",
+        "    \"tools\": {\n",
+        "        \"apply_filter\": apply_filter,\n",
+        "    }\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Register a chatbot extension as an ImJoy plugin\n",
+        "\n",
+        "The following will show the chatbot window, then you can type for example `run the gaussian filter example` to invoke the tool you defined in the extension."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "from imjoy_rpc import api\n",
-        "from pydantic import BaseModel, Field\n",
         "\n",
+        "async def setup():\n",
+        "    chatbot = await api.createWindow(src=\"https://chat.bioimage.io/public/apps/bioimageio-chatbot-client/chat\")\n",
+        "    await chatbot.registerExtension(image_processing_extension)\n",
+        "\n",
+        "api.export({\"setup\": setup})"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Example 2: Serving extension remotely using hypha\n",
+        "\n",
+        "Besides running the extension in the browser using ImJoy, you can also run the extension remotely using [hypha](https://ha.amun.ai). This allows the extension to run in a native Python environment which have easier access to hardware devices (e.g. the actual microscope) and more computational resources.\n",
+        "\n",
+        "Similar to the ImJoy plugin, you need to register the extension as a hypha service."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from imjoy_rpc.hypha import connect_to_server\n",
+        "\n",
+        "server_url = \"https://chat.bioimage.io\"\n",
+        "server = await connect_to_server({\"server_url\": server_url})\n",
+        "svc = await server.register_service(image_processing_extension)\n",
+        "print(f\"Extension service registered with id: {svc.id}, you can visit the service at: {server_url}/public/apps/bioimageio-chatbot-client/chat?extension={svc.id}\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "To use the chatbot, you can now click the link above, or use the following code to run the chatbot in the browser."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "## Display the chatbot as embedded iframe\n",
+        "from IPython.display import display, IFrame\n",
+        "display(IFrame(src=\"https://chat.bioimage.io/public/apps/bioimageio-chatbot-client/chat\", width=\"100%\", height=\"600px\"))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Example 1: Controlling a microscope using the chatbot"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pydantic import BaseModel, Field\n",
         "    \n",
         "class MoveStageInput(BaseModel):\n",
         "    \"\"\"Move the microscope stage\"\"\"\n",
@@ -134,29 +246,39 @@
         "    await api.showDialog(src=\"https://bioimage.io\")\n",
         "    return \"success\"\n",
         "\n",
-        "async def setup():\n",
-        "    chatbot = await api.createWindow(src=\"https://chat.bioimage.io/public/apps/bioimageio-chatbot-client/chat\")\n",
-        "    \n",
-        "    def get_schema():\n",
+        "def get_schema():\n",
         "        return {\n",
         "            \"move_stage\": MoveStageInput.schema(),\n",
         "            \"snap_image\": SnapImageInput.schema()\n",
         "        }\n",
         "\n",
-        "    extension = {\n",
-        "        \"_rintf\": True,\n",
-        "        \"id\": \"squid-control\",\n",
-        "        \"name\": \"Squid Microscope Control\",\n",
-        "        \"description\": \"Contorl the squid microscope....\",\n",
-        "        \"get_schema\": get_schema,\n",
-        "        \"tools\": {\n",
-        "            \"move_stage\": move_stage,\n",
-        "            \"snap_image\": snap_image,\n",
-        "        }\n",
+        "# Define an chatbot extension\n",
+        "microscope_control_extension = {\n",
+        "    \"_rintf\": True,\n",
+        "    \"id\": \"microscope-control\",\n",
+        "    \"type\": \"bioimageio-chatbot-extension\",\n",
+        "    \"name\": \"Microscope Control\",\n",
+        "    \"description\": \"Contorl the microscope....\",\n",
+        "    \"get_schema\": get_schema,\n",
+        "    \"tools\": {\n",
+        "        \"move_stage\": move_stage,\n",
+        "        \"snap_image\": snap_image,\n",
         "    }\n",
-        "    await chatbot.registerExtension(extension)\n",
+        "}\n",
         "\n",
-        "api.export({\"setup\": setup})"
+        "from imjoy_rpc.hypha import connect_to_server\n",
+        "\n",
+        "server_url = \"https://chat.bioimage.io\"\n",
+        "server = await connect_to_server({\"server_url\": server_url})\n",
+        "svc = await server.register_service(microscope_control_extension)\n",
+        "print(f\"Extension service registered with id: {svc.id}, you can visit the service at: {server_url}/public/apps/bioimageio-chatbot-client/chat?extension={svc.id}\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Example 2: Query the models in the model zoo via code generation"
       ]
     },
     {
@@ -333,6 +455,7 @@
         "    await register({\n",
         "        \"_rintf\": True,\n",
         "        \"id\": \"bioimage_model_zoo\",\n",
+        "        \"type\": \"bioimageio-chatbot-extension\",\n",
         "        \"name\": \"BioImage Model Zoo\",\n",
         "        \"description\": \"Getting information about models, applications, datasets, etc. in the BioImage Model Zoo. It takes a list of keywords or a python script to query the resources in the BioImage Model Zoo.\",\n",
         "        \"get_schema\": get_schema,\n",
