Move chatbot ui to bioimage.io

--- a/docs/bioimage-chatbot-extension-tutorial.ipynb
+++ b/docs/bioimage-chatbot-extension-tutorial.ipynb
@@ -68,7 +68,7 @@
         "\n",
         "async def setup():\n",
         "    chatbot = await api.createWindow(\n",
-        "        src=\"https://chat.bioimage.io/public/apps/bioimageio-chatbot-client/chat\",\n",
+        "        src=\"https://bioimage.io/chat\",\n",
         "        name=\"BioImage.IO Chatbot\",\n",
         "    )\n",
         "    \n",
@@ -161,7 +161,7 @@
         "from imjoy_rpc import api\n",
         "\n",
         "async def setup():\n",
-        "    chatbot = await api.createWindow(src=\"https://chat.bioimage.io/public/apps/bioimageio-chatbot-client/chat\")\n",
+        "    chatbot = await api.createWindow(src=\"https://bioimage.io/chat\", name=\"BioImage.IO Chatbot\")\n",
         "    await chatbot.registerExtension(image_processing_extension)\n",
         "\n",
         "api.export({\"setup\": setup})"
@@ -189,7 +189,7 @@
         "server_url = \"https://chat.bioimage.io\"\n",
         "server = await connect_to_server({\"server_url\": server_url})\n",
         "svc = await server.register_service(image_processing_extension)\n",
-        "print(f\"Extension service registered with id: {svc.id}, you can visit the service at: {server_url}/public/apps/bioimageio-chatbot-client/chat?extension={svc.id}\")\n"
+        "print(f\"Extension service registered with id: {svc.id}, you can visit the service at: https://bioimage.io/chat?server={server_url}&extension={svc.id}\")\n"
       ]
     },
     {
@@ -207,7 +207,7 @@
       "source": [
         "## Display the chatbot as embedded iframe\n",
         "from IPython.display import display, IFrame\n",
-        "display(IFrame(src=\"https://chat.bioimage.io/public/apps/bioimageio-chatbot-client/chat\", width=\"100%\", height=\"600px\"))"
+        "display(IFrame(src=\"https://bioimage.io/chat\", width=\"100%\", height=\"600px\"))"
       ]
     },
     {
@@ -271,7 +271,7 @@
         "server_url = \"https://chat.bioimage.io\"\n",
         "server = await connect_to_server({\"server_url\": server_url})\n",
         "svc = await server.register_service(microscope_control_extension)\n",
-        "print(f\"Extension service registered with id: {svc.id}, you can visit the service at: {server_url}/public/apps/bioimageio-chatbot-client/chat?extension={svc.id}\")\n"
+        "print(f\"Extension service registered with id: {svc.id}, you can visit the service at: https://bioimage.io/chat?server={server_url}&extension={svc.id}\")\n"
       ]
     },
     {
@@ -467,7 +467,7 @@
         "\n",
         "\n",
         "async def setup():\n",
-        "    chatbot = await api.createWindow(src=\"https://chat.bioimage.io/public/apps/bioimageio-chatbot-client/chat\")\n",
+        "    chatbot = await api.createWindow(src=\"https://bioimage.io/chat\")\n",
         "    await register_chatbot_extension(chatbot.registerExtension)\n",
         "\n",
         "api.export({\"setup\": setup})"
