update tutorial notebook

--- a/docs/bioimage-chatbot-extension-tutorial.ipynb
+++ b/docs/bioimage-chatbot-extension-tutorial.ipynb
@@ -147,7 +147,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Register a chatbot extension as an ImJoy plugin\n",
+        "## Option 1: Register a chatbot extension as an ImJoy plugin\n",
         "\n",
         "The following will show the chatbot window, then you can type for example `run the gaussian filter example` to invoke the tool you defined in the extension."
       ]
@@ -171,7 +171,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Example 2: Serving extension remotely using hypha\n",
+        "## Option 2: Serving extension remotely using hypha\n",
         "\n",
         "Besides running the extension in the browser using ImJoy, you can also run the extension remotely using [hypha](https://ha.amun.ai). This allows the extension to run in a native Python environment which have easier access to hardware devices (e.g. the actual microscope) and more computational resources.\n",
         "\n",
@@ -184,12 +184,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from imjoy_rpc.hypha import connect_to_server\n",
+        "from imjoy_rpc.hypha import connect_to_server, login\n",
         "\n",
         "server_url = \"https://chat.bioimage.io\"\n",
-        "server = await connect_to_server({\"server_url\": server_url})\n",
+        "token = await login({\"server_url\": server_url})\n",
+        "server = await connect_to_server({\"server_url\": server_url, \"token\": token})\n",
+        "# Below, we set the visibility to public\n",
+        "image_processing_extension['config'] = {\"visibility\": \"public\"}\n",
         "svc = await server.register_service(image_processing_extension)\n",
-        "print(f\"Extension service registered with id: {svc.id}, you can visit the service at: https://bioimage.io/chat?server={server_url}&extension={svc.id}\")\n"
+        "print(f\"Extension service registered with id: {svc.id}, you can visit the service at: https://bioimage.io/chat?server={server_url}&extension={svc.id}&assistant=Skyler\")"
       ]
     },
     {
@@ -214,6 +217,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Additional Examples\n",
         "### Example 1: Controlling a microscope using the chatbot"
       ]
     },
@@ -266,12 +270,15 @@
         "    }\n",
         "}\n",
         "\n",
-        "from imjoy_rpc.hypha import connect_to_server\n",
+        "from imjoy_rpc.hypha import connect_to_server, login\n",
         "\n",
         "server_url = \"https://chat.bioimage.io\"\n",
-        "server = await connect_to_server({\"server_url\": server_url})\n",
+        "token = await login({\"server_url\": server_url})\n",
+        "server = await connect_to_server({\"server_url\": server_url, \"token\": token})\n",
+        "# Below, we set the visibility to public\n",
+        "microscope_control_extension['config'] = {\"visibility\": \"public\"}\n",
         "svc = await server.register_service(microscope_control_extension)\n",
-        "print(f\"Extension service registered with id: {svc.id}, you can visit the service at: https://bioimage.io/chat?server={server_url}&extension={svc.id}\")\n"
+        "print(f\"Extension service registered with id: {svc.id}, you can visit the service at: https://bioimage.io/chat?server={server_url}&extension={svc.id}&assistant=Skyler\")"
       ]
     },
     {
