updated extension notebook, deepimagej docs link and added docs link

--- a/docs/bioimage-chatbot-extension-tutorial.ipynb
+++ b/docs/bioimage-chatbot-extension-tutorial.ipynb
@@ -184,6 +184,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import micropip\n",
+    "await micropip.install(\"hypha-rpc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from hypha_rpc import connect_to_server, login\n",
     "\n",
     "server_url = \"https://chat.bioimage.io\"\n",
